--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,14 @@
     <properties>
         <junit.version>4.12</junit.version>
         <netty.version>4.1.21.Final</netty.version>
+        <springboot.version>2.1.14.RELEASE</springboot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <protobuf.version>3.4.0</protobuf.version>
         <fastJSON.version>1.2.31</fastJSON.version>
         <guava.version>19.0</guava.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <mysql.version>8.0.15</mysql.version>
     </properties>
 
     <parent>
@@ -68,6 +71,40 @@
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+
+        <!-- 二维码 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+
+        <!-- fdfs -->
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.26.2</version>
+        </dependency>
+
     </dependencies>
 
 
