--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>im-server</module>
         <module>im-common</module>
+        <module>im-userstats</module>
     </modules>
 
 
@@ -24,7 +25,7 @@
         <springboot.version>2.1.14.RELEASE</springboot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <protobuf.version>3.4.0</protobuf.version>
+        <protobuf.version>3.8.0</protobuf.version>
         <fastJSON.version>1.2.31</fastJSON.version>
         <guava.version>19.0</guava.version>
         <slf4j.version>1.7.7</slf4j.version>
@@ -53,6 +54,12 @@
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
                 <version>${protobuf.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.googlecode.protobuf-java-format</groupId>
+                <artifactId>protobuf-java-format</artifactId>
+                <version>1.2</version>
             </dependency>
 
             <dependency>
