完善基础websocket服务器搭建（next step：业务处理器逻辑）-- from work-email

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <modules>
         <module>im-server</module>
         <module>im-common</module>
-        <module>im-userstats</module>
+        <module>im-api</module>
     </modules>
 
 
