--- a/im-common/pom.xml
+++ b/im-common/pom.xml
@@ -28,6 +28,14 @@
             <artifactId>protobuf-java-format</artifactId>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
     </dependencies>
 
    <build>
