--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <guava.version>19.0</guava.version>
         <slf4j.version>1.7.7</slf4j.version>
         <mysql.version>8.0.15</mysql.version>
+        <hutool.version>4.6.5</hutool.version>
     </properties>
 
     <parent>
@@ -128,6 +129,13 @@
                 <groupId>com.github.tobato</groupId>
                 <artifactId>fastdfs-client</artifactId>
                 <version>1.26.2</version>
+            </dependency>
+
+            <!-- hutool 工具类-->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
             </dependency>
 
         </dependencies>
