--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,13 @@
                 <version>${hutool.version}</version>
             </dependency>
 
+        <!--腾讯云短信服务-->
+            <dependency>
+                <groupId>com.tencentcloudapi</groupId>
+                <artifactId>tencentcloud-sdk-java</artifactId>
+                <version>3.1.26</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
