client connect server test

--- a/im-server/pom.xml
+++ b/im-server/pom.xml
@@ -20,6 +20,35 @@
             <artifactId>netty-all</artifactId>
         </dependency>
 
+        <!--热加载-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!--web-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!--测试-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!--aop-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,10 +66,13 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -49,9 +81,15 @@
 
         <dependency>
             <groupId>pers.enoch.im</groupId>
-            <artifactId>im-api</artifactId>
+            <artifactId>im-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>pers.enoch.im</groupId>-->
+<!--            <artifactId>im-api</artifactId>-->
+<!--            <version>1.0.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 </project>
