--- a/im-common/pom.xml
+++ b/im-common/pom.xml
@@ -91,6 +91,11 @@
             <version>0.9.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+
         <!-- hutool 工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
