--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <modules>
-        <module>im-server</module>
         <module>im-common</module>
         <module>im-api</module>
         <module>im-client</module>
@@ -34,6 +33,7 @@
         <hutool.version>4.6.5</hutool.version>
         <mybatis-plus.version>3.1.0</mybatis-plus.version>
         <druid-version>1.1.18</druid-version>
+        <docker.image.prefix>springboot</docker.image.prefix>
     </properties>
 
     <parent>
@@ -176,6 +176,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
