--- a/im-common/pom.xml
+++ b/im-common/pom.xml
@@ -125,31 +125,23 @@
 
     </dependencies>
 
-   <build>
-       <plugins>
-           <plugin>
-               <groupId>org.xolstice.maven.plugins</groupId>
-               <artifactId>protobuf-maven-plugin</artifactId>
-               <version>0.5.0</version>
-               <extensions>true</extensions>
-               <configuration>
-                   <protoSourceRoot>${project.basedir}/src/main/resources/proto</protoSourceRoot>
-                   <protocExecutable>/usr/local/Cellar/protobuf/3.14.0/bin/protoc</protocExecutable>
-                   <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
-                   <clearOutputDirectory>false</clearOutputDirectory>
-                   <temporaryProtoFileDirectory>${project.build.directory}/protoc-dependencies
-                   </temporaryProtoFileDirectory>
-                   <!--配置查看https://www.xolstice.org/protobuf-maven-plugin/compile-mojo.html-->
-               </configuration>
-<!--               <executions>-->
-<!--                   <execution>-->
-<!--                       <goals>-->
-<!--                           <goal>compile</goal>-->
-<!--                           <goal>compile-custom</goal>-->
-<!--                       </goals>-->
-<!--                   </execution>-->
-<!--               </executions>-->
-           </plugin>
-       </plugins>
-   </build>
+<!--   <build>-->
+<!--       <plugins>-->
+<!--           <plugin>-->
+<!--               <groupId>org.xolstice.maven.plugins</groupId>-->
+<!--               <artifactId>protobuf-maven-plugin</artifactId>-->
+<!--               <version>0.5.0</version>-->
+<!--               <extensions>true</extensions>-->
+<!--               <configuration>-->
+<!--                   <protoSourceRoot>${project.basedir}/src/main/resources/proto</protoSourceRoot>-->
+<!--                   <protocExecutable>/usr/local/Cellar/protobuf/3.14.0/bin/protoc</protocExecutable>-->
+<!--                   <outputDirectory>${project.basedir}/src/main/java</outputDirectory>-->
+<!--                   <clearOutputDirectory>false</clearOutputDirectory>-->
+<!--                   <temporaryProtoFileDirectory>${project.build.directory}/protoc-dependencies-->
+<!--                   </temporaryProtoFileDirectory>-->
+<!--                   &lt;!&ndash;配置查看https://www.xolstice.org/protobuf-maven-plugin/compile-mojo.html&ndash;&gt;-->
+<!--               </configuration>-->
+<!--           </plugin>-->
+<!--       </plugins>-->
+<!--   </build>-->
 </project>
